# Lattice-Deduction-Transformer

./: README.md  pyproject.toml
configs/: maze_hard_30.json  snowflake.json  sudoku_extreme.json
ldt/: __init__.py  config.py
ldt/cli/: __init__.py  common.py  eval.py  prepare_sudoku_extreme.py  smoke_overfit.py  train.py
ldt/data/: __init__.py  sudoku.py  sudoku_extreme.py
ldt/domains/: __init__.py  base.py  maze.py  snowflake.py  sudoku.py
ldt/eval/: __init__.py  runner.py
ldt/io/: __init__.py  checkpoint.py
ldt/lattice/: __init__.py  ops.py  state.py
ldt/model/: __init__.py  attention.py  config.py  ldt.py
ldt/solve/: __init__.py  infer.py  pool.py  step.py
ldt/train/: __init__.py  loss.py  optim.py  runner.py  step.py
tests/: test_batched_inference.py  test_cli.py  test_domain_protocol.py  test_infra.py  test_lattice_ops.py  test_maze_domain.py  test_model_config.py  test_model_ldt.py  test_snowflake_domain.py  test_solve_step.py  test_sudoku_domain.py  test_sudoku_extreme_data.py  test_train_loss.py  test_training_pool.py  test_training_runner.py  test_training_step.py
