[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-deduction-transformer"
version = "0.1.0"
description = "Domain-agnostic Lattice Deduction Transformer implementation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.3",
]

[project.scripts]
ldt-eval = "ldt.cli.eval:main"
ldt-smoke-overfit = "ldt.cli.smoke_overfit:main"
ldt-train = "ldt.cli.train:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.1",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["ldt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
